recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:13: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
  avance()
        ^Koch:14: error: not found: value snowside
    snowside(levels-1,length*(levels-1))
    ^Koch:16: error: not found: value snowside
     snowside(levels-2,length*(levels-2))
     ^Koch:18: error: not found: value snowside
    snowside(levels-3,length*(levels-3))
    ^Koch:20: error: not found: value snowside
    snowside(levels-4,length*(levels-4))
    ^